# core

./: .astylerc  .clang-format  .dockerignore  .editorconfig  .env  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .nanorc  .pre-commit-config.yaml  .travis.yml  ADAPT  AGENTS.md  AUTHORS  CMakeLists.txt  CONTRIBUTORS  COPYRIGHT  Custom.cmake  DESCRIPTION  Dockerfile  FindMetaCall.cmake  FindRapidJSON.cmake  FindSpiderMonkey.cmake  FindV8.cmake  InstallGBench.cmake  InstallGTest.cmake  InstallRapidJSON.cmake  LICENSE  NOTICE  NOTICE.md  README  README.md  TODO  TODO.md  WELCOME  configure  docker-bake.hcl  docker-compose-multiarch.yml  docker-compose.cache.yml  (+13 more)
docs/api-docs/: CMakeLists.txt  doxyfile.in
docs/api-docs/config/: doxyfile.in
docs/style/: CMakeLists.txt
docs/style/source/: metacall_style.tex
source/: CMakeLists.txt  CheckCXXCompilerFlagStackSmashing.cpp  CompileOptions.cmake  ComponentInstall.cmake  FindCoreCLR.cmake  FindLLVM.cmake  FindV8.cmake  version.h.in
source/adt/: CMakeLists.txt
source/adt/source/: adt.c  adt_bucket.c  adt_comparable.c  adt_hash.c  adt_hash_map.c  adt_map.c  adt_set.c  adt_set_bucket.c  adt_trie.c  adt_vector.c  comparable.c  hash.c  hash_map.c  hash_map_str.c  set.c  trie.c  vector.c
source/backtrace/: CMakeLists.txt
source/backtrace/source/: backtrace.c  backtrace_none.c  backtrace_unix.c  backtrace_win32.c
source/benchmarks/: CMakeLists.txt
source/benchmarks/log_bench/: CMakeLists.txt
source/benchmarks/metacall_cs_call_bench/: CMakeLists.txt
source/benchmarks/metacall_node_call_bench/: CMakeLists.txt
source/benchmarks/metacall_py_c_api_bench/: CMakeLists.txt
source/benchmarks/metacall_py_call_bench/: CMakeLists.txt
source/benchmarks/metacall_py_init_bench/: CMakeLists.txt
source/benchmarks/metacall_rb_call_bench/: CMakeLists.txt
source/benchmarks/set_bench/: CMakeLists.txt
source/cli/: CMakeLists.txt
source/cli/metacallcli/: CMakeLists.txt  README.md
source/cli/metacallcli-bootstrap/: CMakeLists.txt
source/cli/plugins/: CMakeLists.txt
source/cmake/: FindMetaCall.cmake
source/configs/: CMakeLists.txt
source/configs/rapid_json_config/: CMakeLists.txt
source/configuration/: CMakeLists.txt
source/configuration/source/: configuration.c  configuration_impl.c  configuration_impl_rapid_json.cpp  configuration_interface.c  configuration_interface_rapid_json.c  configuration_object.c  configuration_singleton.c  configuration_stream.c
source/cs_port/source/: project.json
source/cxx_port/: CMakeLists.txt
source/detour/: CMakeLists.txt
source/detour/source/: detour.c  detour_impl.c  detour_singleton.c
source/detours/: CMakeLists.txt
source/detours/funchook_detour/: CMakeLists.txt
source/detours/funhook_detour/: CMakeLists.txt
source/detours/plthook_detour/: CMakeLists.txt
source/distributable/: CMakeLists.txt
source/distributable/source/: ldconfig.sh
source/dynlink/: CMakeLists.txt
source/dynlink/source/: dynlink.c  dynlink_impl.c  dynlink_impl_android.c  dynlink_impl_beos.c  dynlink_impl_hpux.c  dynlink_impl_macos.c  dynlink_impl_qnx.c  dynlink_impl_unix.c  dynlink_impl_vxworks.c  dynlink_impl_win32.c  dynlink_interface.c  dynlink_interface.c.in  dynlink_symbol.c
source/environment/: CMakeLists.txt
source/environment/source/: environment.c  environment_variable.c  environment_variable_path.c
source/examples/: CMakeLists.txt
source/examples/metacallcli/: CMakeLists.txt  application.cpp  application.h  application.hpp  main.cpp  parser.cpp  parser.h  parser.hpp  parser.inl  tokenizer.cpp  tokenizer.h  tokenizer.hpp
source/examples/metacallcmd/: CMakeLists.txt  main.cpp
source/examples/metacallgui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.hpp  main_window.ui  todo
source/examples/metacalllog/: CMakeLists.txt  main.cpp
source/examples/metacallnginx/: CMakeLists.txt  config  nginx.conf  nginx.conf.in  ngx_http_rest_metacall_module.c  ngx_http_rest_metacall_module.h  ngx_http_rest_metacall_uri.c  ngx_http_rest_metacall_uri.h
source/examples/metacallppcli/: CMakeLists.txt  main.cpp
source/examples/metacallpy/: CMakeLists.txt  main.py
source/examples/metacallquine/: CMakeLists.txt  main.cpp
source/examples/metacallweb/: CMakeLists.txt  main.cpp
source/extensions/: CMakeLists.txt
source/extensions/load_extension/: CMakeLists.txt
source/extensions/load_extensions/: CMakeLists.txt
source/extensions/plugin_extension/: CMakeLists.txt
source/filesystem/: CMakeLists.txt
source/filesystem/source/: directory_descriptor.c  file_descriptor.c  filesystem.c  filesystem_directory_descriptor.c  filesystem_file_descriptor.c
source/format/: CMakeLists.txt
source/format/source/: format.c  format_print.c
source/js_port/: CMakeLists.txt
source/js_port/cmake/: RemoveArgsCheck.cmake
source/js_port/source/: js_port.c
source/js_port/test/: js_port_test_utility.js  main.cpp  run.js.in
source/loader/: CMakeLists.txt
source/loader/source/: loader.c  loader_env.c  loader_host.c  loader_impl.c  loader_manager_impl.c  loader_naming.c  loader_path.c
source/loaders/: CMakeLists.txt  loader.json.in  loaders.h.in
source/loaders/c_loader/: CMakeLists.txt
source/loaders/cob_loader/: CMakeLists.txt
source/loaders/cr_loader/: CMakeLists.txt
source/log/: CMakeLists.txt
source/memory/: CMakeLists.txt
source/metacall/: CMakeLists.txt  metacall_def.h.in
source/metacallpp/: CMakeLists.txt
source/plugin/: CMakeLists.txt
source/plugins/: CMakeLists.txt  plugins.h.in
source/pocs/: Test.bc  Test.c  Test.ll  example.cpp  test  test.cpp
source/portability/: CMakeLists.txt
source/ports/: .gitmodules  AUTHORS  CMakeLists.txt  README.md
source/preprocessor/: CMakeLists.txt
source/py_port/: CMakeLists.txt
source/rb_port/: CMakeLists.txt
source/reflect/: CMakeLists.txt
source/scripts/: CMakeLists.txt
source/serial/: CMakeLists.txt
source/serials/: CMakeLists.txt
source/telemetry/: README.md
source/tests/: CMakeLists.txt  valgrind.supp
source/threading/: CMakeLists.txt
source/version/: CMakeLists.txt
(+2573 files in other folders)
